--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <div class="container">
     <div class="row">
       <div class="col-6">
-        <img src="luf.jpg" class="img-thumbnail" style="width:400px;height:500px;"/>
-        <button class="btn-primary" type=button> Like </button>
+        <img src="luf.jpg" class="img-thumbnail" style="width:400px;height:500px;"/
+        <button class="btn-primary" type=button> Like </button> <br>
           </div>
       <div class="container">
     <div class="row">
