--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <div class="container">
     <div class="row">
       <div class="col-6">
-        <img src="luf.jpg" class="img-thumbnail" style="width:400px;height:500px;"/ <br>
+        <img src="luf.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
         <button class="btn-primary" type=button> Like </button> 
           </div>
       <div class="container">
     <div class="row">
       <div class="col-6">
-        <img src="love.jpg" class="img-thumbnail" style="width:400px;height:500px;"/>
+        <img src="love.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
         <button class="btn-primary" type=button> Like </button>
           </div>
       </div>
