--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <div class="row">
       <div class="col-6">
         <img src="luf.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-        <button class="btn-primary" type=button> Like </button> 
+        <button class="btn btn-primary" type=button> Like </button> 
           </div>
       <div class="container">
     <div class="row">
       <div class="col-6">
         <img src="love.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-        <button class="btn-primary" type=button> Like </button>
+        <button class="btn btn-primary" type=button> Like </button>
           </div>
       </div>
   </div>
