--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-2">
-        <img src="luf.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+      <div class="col-6">
+        <img src="luf.jpg" class="img-thumbnail" style="width:400px;height:500px;"/>
+        <br>
         <button class="btn btn-primary" type=button> Like </button> 
           </div>
       <div class="container">
     <div class="row">
-      <div class="col-2">
-        <img src="love.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-        <button class="btn btn-primary" type=button> Like </button>
+      <div class="col-6">
+        <img src="love.jpg" class="img-thumbnail" style="width:400px;height:500px;"/>
+        <br>
+        <button class="btn btn-primary" type=button>  Like </button>
           </div>
       </div>
   </div>
