--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
        <div class="row">
          <div class="col-6">
            <img src="1.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
-           <button class="btn btn-primary" type=button> Like </button>
+           <button class="btn btn-primary" type="button" id="btnLike1> Like </button>
+              <output id="countLike1"></output>
          </div>
          <div class="col-6">
            <img src="love.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
-           <button class="btn btn-primary" type=button> Like </button>
+           <button class="btn btn-primary" type="button" id="btnLike2>  Like </button>
+              <output id="countLike2"></output>
          </div>
        </div>
      </div>
