--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
            <img src="love.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
            <button class="btn btn-primary" type="button" id="btnLike2>  Like </button>
               <output id="countLike2"></output>
-         </div>
-       </div>
+            </div>
+        </div>
      </div>
+      <script src="index.js"></script>
    </body>
 </html>
