--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
      <div class="container">
        <div class="row">
          <div class="col-6">
-           <img src="1.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
-           <button class="btn btn-primary" type="button" id="btnLike1> Like </button>
-              <output id="countLike1">0</output>
+           <img src="luf.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
+           <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
+              <output id="countLikes1">0</output>
          </div>
          <div class="col-6">
-           <img src="2.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
-           <button class="btn btn-primary" type="button" id="btnLike2>  Like </button>
-              <output id="countLike2">0</output>
+           <img src="love.jpg" class="img-thumbnail" style="width:400px;height:500px;"/><br>
+           <button class="btn btn-primary" type="button" id="btnLike2">  Like </button>
+              <output id="countLikes2">0</output>
             </div>
         </div>
      </div>
