--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		  Comment<br>
 		<input type="text" class="form-control" id="comment"/>
 		<button clas="btn btn-success" id="submit">Submit</button>
-		  <textarea class="form-control" id="commentbox" rows="20"><textarea>
+		  <textarea class="form-control" id="commentbox" rows="20"></textarea>
 	   </div>
         </div>
      </div>
